Update use resend to fix for preventing port
